Configure helidon-mave-plugin jlink-image to use --enable-preview (#6048)