@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2019, 2022 Oracle and/or its affiliates.
+    Copyright (c) 2019, 2023 Oracle and/or its affiliates.
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -164,6 +164,9 @@
                             <version>${helidon.version}</version>
                         </dependency>
                     </dependencies>
+                   <configuration>
+                       <defaultJvmOptions>--enable-preview</defaultJvmOptions>
+                   </configuration>
                 </plugin>
                 <plugin>
                     <groupId>io.helidon.build-tools</groupId>
